[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "contribution-analyzer"
version = "1.1.0"
description = "Analyze git contributions — per-person or whole-team — strengths, weaknesses, and an anonymized (or opt-in named) comparison, optionally narrated by Claude."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["git", "github", "contributions", "claude", "code-review", "analytics"]
dependencies = []  # Standard library only.

[project.scripts]
contribution-analyzer = "contribution_analyzer.cli:main"

[tool.setuptools]
packages = ["contribution_analyzer"]
